--- a/virtual-piano/index.html
+++ b/virtual-piano/index.html
@@ -25,28 +25,42 @@
       <button class="btn btn-notes btn-active">Notes</button>
       <button class="btn btn-letters">Letters</button>
     </div>
-    <div class="piano">
-      <div class="piano-key" data-letter="D" data-note="c"></div>
-      <div class="piano-key" data-letter="F" data-note="d"></div>
-      <div class="piano-key" data-letter="G" data-note="e"></div>
-      <div class="piano-key" data-letter="H" data-note="f"></div>
-      <div class="piano-key" data-letter="J" data-note="g"></div>
-      <div class="piano-key" data-letter="K" data-note="a"></div>
-      <div class="piano-key" data-letter="L" data-note="b"></div>
-      <div class="keys-sharp">
-        <div class="piano-key sharp" data-letter="R" data-note="c♯"></div>
-        <div class="piano-key sharp" data-letter="T" data-note="d♯"></div>
-        <div class="piano-key sharp none"></div>
-        <div class="piano-key sharp" data-letter="U" data-note="f♯"></div>
-        <div class="piano-key sharp" data-letter="I" data-note="g♯"></div>
-        <div class="piano-key sharp" data-letter="O" data-note="a♯"></div>
+    <section>
+      <div class="piano">
+        <div class="key piano-key" data-letter="D" data-note="c"></div>
+        <div class="key piano-key" data-letter="F" data-note="d"></div>
+        <div class="key piano-key" data-letter="G" data-note="e"></div>
+        <div class="key piano-key" data-letter="H" data-note="f"></div>
+        <div class="key piano-key" data-letter="J" data-note="g"></div>
+        <div class="key piano-key" data-letter="K" data-note="a"></div>
+        <div class="key piano-key" data-letter="L" data-note="b"></div>
+        <div class="keys-sharp">
+          <div class="key piano-key sharp" data-letter="R" data-note="c♯"></div>
+          <div class="key piano-key sharp" data-letter="T" data-note="d♯"></div>
+          <div class="key piano-key sharp none"></div>
+          <div class="key piano-key sharp" data-letter="U" data-note="f♯"></div>
+          <div class="key piano-key sharp" data-letter="I" data-note="g♯"></div>
+          <div class="key piano-key sharp" data-letter="O" data-note="a♯"></div>
+        </div>
       </div>
-    </div>
+      <audio id="a♯" data-letter="O" data-note="a♯" src="./assets/audio/a♯.mp3"></audio>
+      <audio id="g♯" data-letter="I" data-note="g♯" src="./assets/audio/g♯.mp3"></audio>
+      <audio id="f♯" data-letter="U" data-note="f♯" src="./assets/audio/f♯.mp3"></audio>
+      <audio id="d♯" data-letter="T" data-note="d♯" src="./assets/audio/d♯.mp3"></audio>
+      <audio id="c♯" data-letter="R" data-note="c♯" src="./assets/audio/c♯.mp3"></audio>
+      <audio id="b" data-letter="L" data-note="b" src="./assets/audio/b.mp3"></audio>
+      <audio id="a" data-letter="K" data-note="a" src="./assets/audio/a.mp3"></audio>
+      <audio id="g" data-letter="J" data-note="g" src="./assets/audio/g.mp3"></audio>
+      <audio id="f" data-letter="H" data-note="f" src="./assets/audio/f.mp3"></audio>
+      <audio id="e" data-letter="G" data-note="e" src="./assets/audio/e.mp3"></audio>
+      <audio id="d" data-letter="F" data-note="d" src="./assets/audio/d.mp3"></audio>
+      <audio id="c" data-letter="D" data-note="c" src="./assets/audio/c.mp3"></audio>
+    </section>
     <button class="fullscreen openfullscreen"></button>
   </main>
   <footer class="footer">
     <div class="footer-container">
-      <a class="github" href="#" target="_blank" rel="noopener noreferrer">github</a>
+      <a class="github" href="https://github.com/ArturMakutonin" target="_blank" rel="noopener noreferrer">github</a>
       <a class="rss" href="https://rs.school/js/" target="_blank" rel="noopener noreferrer">
         <span class="rss-year">'21</span>
       </a>
