Fix : fullscreen API exit

--- a/virtual-piano/index.html
+++ b/virtual-piano/index.html
@@ -56,7 +56,7 @@
       <audio data-key="70" id="d" data-letter="F" data-note="d" src="./assets/audio/d.mp3"></audio>
       <audio data-key="68" id="c" data-letter="D" data-note="c" src="./assets/audio/c.mp3"></audio>
     </section>
-    <button onclick="activateFullscreen(document.getElementById('my-page'))" onclick="deactivateFullscreen()" class="fullscreen openfullscreen"></button>
+    <button onclick="activateFullscreen(document.getElementById('my-page'))"  class="fullscreen openfullscreen"></button>
   </main>
   <footer class="footer">
     <div class="footer-container">
